// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render Deals Summary with 1 deal 1`] = `
<div
  className="page-header"
>
  <div
    className="container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      deal
       totalling 
      <span>
        $2.35
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Deal
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render Deals Summary with more deals 1`] = `
<div
  className="page-header"
>
  <div
    className="container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        23
      </span>
       
      deals
       totalling 
      <span>
        $235,345,678.90
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Deal
      </Link>
    </div>
  </div>
</div>
`;
